修改仪器维护界面英文按钮显示信息

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/SysMaintenance/frmInstruMaintenance.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/SysMaintenance/frmInstruMaintenance.en.resx
@@ -976,7 +976,7 @@
     <value>Times New Roman, 14.25pt, style=Bold</value>
   </data>
   <data name="functionButton1.Text" xml:space="preserve">
-    <value>Instrument initialization</value>
+    <value>Instrument Initialization</value>
   </data>
   <data name="fbtnGroupTest.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -1046,7 +1046,7 @@
     <value>Times New Roman, 14.25pt, style=Bold</value>
   </data>
   <data name="fbtnGroupTest.Text" xml:space="preserve">
-    <value>Battery of tests</value>
+    <value>Battery Of Tests</value>
   </data>
   <data name="fbtnReturn.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -1186,7 +1186,7 @@
     <value>Times New Roman, 14.25pt, style=Bold</value>
   </data>
   <data name="fbtnInstruDiagnost.Text" xml:space="preserve">
-    <value>Instrument debugging</value>
+    <value>Instrument Debugging</value>
   </data>
   <data name="fbtnInstruMaintenance.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
@@ -1256,7 +1256,7 @@
     <value>Times New Roman, 14.25pt, style=Bold</value>
   </data>
   <data name="fbtnInstruMaintenance.Text" xml:space="preserve">
-    <value>Instrument maintenance</value>
+    <value>Instrument Maintenance</value>
   </data>
   <data name="label6.Font" type="System.Drawing.Font, System.Drawing">
     <value>Times New Roman, 21.75pt, style=Bold</value>
