--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmAddSample.en.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmAddSample.en.resx
@@ -338,7 +338,7 @@
 </value>
   </data>
   <data name="fbLoadAll.Text" xml:space="preserve">
-    <value>One Key Unpoad Empty</value>
+    <value>One Key Unload Empty</value>
   </data>
   <data name="groupBoxLoad.Text" xml:space="preserve">
     <value>Sample Loading And Unloading
