修改登录界面的英文显示图片

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmReagentLoad.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmReagentLoad.en.resx
@@ -1176,7 +1176,7 @@
     <value>No kit was detected！</value>
   </data>
   <data name="keywordText.OneKeyUnbundling" xml:space="preserve">
-    <value>One Key Solution</value>
+    <value>One-click Unbinding </value>
   </data>
   <data name="keywordText.PealseFirstUnloadSampleAbout" xml:space="preserve">
     <value>This project needs to be tested. Please uninstall the relevant sample information first！</value>
