提交优化的规范性功能测试的代码

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmMain.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmMain.resx
@@ -6261,7 +6261,7 @@
   <data name="keywordText.Wastetubefull" xml:space="preserve">
     <value>废管盒已满</value>
   </data>
-  <data name="Wastepipenormal" xml:space="preserve">
+  <data name="keywordText.Wastepipenormal" xml:space="preserve">
     <value>废管盒正常</value>
   </data>
 </root>
