修改对应错误的资源文件

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmMain.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmMain.resx
@@ -6216,7 +6216,7 @@
   <data name="keywordText.Substratetemperature" xml:space="preserve">
     <value>底物环境温度</value>
   </data>
-  <data name="keywordText.tandardtemperature" xml:space="preserve">
+  <data name="keywordText.Standardtemperature" xml:space="preserve">
     <value>温度已达到运行标准</value>
   </data>
   <data name="keywordText.temperatureButton.ToolTip" xml:space="preserve">
