添加禁止在实验过程中装载底物 添加在实验过程中禁止查询温度信息 样本装载界面添加底物可使用量的判断 实验结果界面优化重新检测功能 仪器调试界面添加确认下载位置信息弹框提示 优化从清洗盘扔管得发送信息

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/DataQuery/frmSupplyStatus.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/DataQuery/frmSupplyStatus.en.resx
@@ -734,4 +734,10 @@
   <data name="keywordText.UnstallSubSucess" xml:space="preserve">
     <value>The substrate was unloaded successfully</value>
   </data>
+  <data name="keywordText.IsRunTest" xml:space="preserve">
+    <value>The test is in progress, and it is forbidden to change the substrate</value>
+  </data>
+  <data name="keywordText.SubChangeWarn" xml:space="preserve">
+    <value>Substrate replacement warning</value>
+  </data>
 </root>
