--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmAddSample.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmAddSample.en.resx
@@ -1844,4 +1844,7 @@
   <data name="keywordText.Yes" xml:space="preserve">
     <value>Yes</value>
   </data>
+  <data name="keywordText.SubNotEnough" xml:space="preserve">
+    <value>Insufficient substrate, this loading was unsuccessful!</value>
+  </data>
 </root>
