--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmAddSample.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmAddSample.resx
@@ -3627,4 +3627,7 @@
   <data name="dataGridViewTextBoxColumn4.UserAddedColumn" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="keywordText.SubNotEnough" xml:space="preserve">
+    <value>底物不足，此次装载不成功!</value>
+  </data>
 </root>
