--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmSampleLoad.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmSampleLoad.en.resx
@@ -988,4 +988,7 @@
   <data name="keywordText.Yes" xml:space="preserve">
     <value>Yes</value>
   </data>
+  <data name="keywordText.AppentSample" xml:space="preserve">
+    <value>After the sample has been added, Please click the work list button to enter the experiment interface!</value>
+  </data>
 </root>
