--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmSampleLoad.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmSampleLoad.resx
@@ -1854,4 +1854,7 @@
   <data name="keywordText.Yes" xml:space="preserve">
     <value>是</value>
   </data>
+  <data name="keywordText.AppentSample" xml:space="preserve">
+    <value>样本追加完毕，请点击工作列表按钮进入实验界面！</value>
+  </data>
 </root>
