--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/DataQuery/frmSupplyStatus.en.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/DataQuery/frmSupplyStatus.en.resx
@@ -734,4 +734,10 @@
   <data name="keywordText.UnstallSubSucess" xml:space="preserve">
     <value>The substrate was unloaded successfully</value>
   </data>
+  <data name="keywordText.IsRunTest" xml:space="preserve">
+    <value>The test is in progress, and it is forbidden to change the substrate</value>
+  </data>
+  <data name="keywordText.SubChangeWarn" xml:space="preserve">
+    <value>Substrate replacement warning</value>
+  </data>
 </root>
