--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmTestResult.en.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmTestResult.en.resx
@@ -1355,10 +1355,10 @@
     <value>Standard</value>
   </data>
   <data name="keywordText.Testcomplete" xml:space="preserve">
-    <value>completed</value>
+    <value>Finish</value>
   </data>
   <data name="keywordText.TestStatusAbondoned" xml:space="preserve">
-    <value>abandonment</value>
+    <value>Abandonment</value>
   </data>
   <data name="keywordText.Tips" xml:space="preserve">
     <value>Tips</value>
@@ -1368,5 +1368,14 @@
   </data>
   <data name="keywordText.WarningOprate" xml:space="preserve">
     <value>Do not do this for non serum samples</value>
+  </data>
+  <data name="keywordText.bReagentDiuLess" xml:space="preserve">
+    <value>Insufficient supplies, this operation is invalid!</value>
+  </data>
+  <data name="keywordText.Reading" xml:space="preserve">
+    <value>Reading</value>
+  </data>
+  <data name="keywordText.SubLess" xml:space="preserve">
+    <value>Insufficient substrate, this operation failed</value>
   </data>
 </root>
