--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.en.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.en.resx
@@ -1413,4 +1413,13 @@
   <data name="keywordText.WashTurnOver" xml:space="preserve">
     <value>Cleaning disk rotation command receiving timeout</value>
   </data>
+  <data name="keywordText.bReagentDiuLess" xml:space="preserve">
+    <value>Insufficient supplies, this operation is invalid!</value>
+  </data>
+  <data name="keywordText.SubLessNoAddS" xml:space="preserve">
+    <value>The number of substrates tested is not enough for this experiment, so no more samples can be added!</value>
+  </data>
+  <data name="keywordText.Tips" xml:space="preserve">
+    <value>消息提示</value>
+  </data>
 </root>
