--- a/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmMain.resx
+++ b/trunk/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/frmMain.resx
@@ -6136,7 +6136,7 @@
     <value>是否确定关闭正在运行的系统！</value>
   </data>
   <data name="keywordText.FastSpeeds" xml:space="preserve">
-    <value>制冷泵转速过快（缺液）!</value>
+    <value>制冷液不足，请添加</value>
   </data>
   <data name="keywordText.HighCoolPlate1" xml:space="preserve">
     <value>制冷片I电流过大!</value>
