修改液位查询指令间隔时间为60秒最大报警为2 转载样本界面修改追加样本定标信息过期可以直接添加 实验结果重测功能添加在为开始进行加样本时不允许设置样本重测 仪器调试中的检验规范性测试清洗效果测试屏蔽从温育盘扔管和从暂存盘向温育盘放管的过程

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmTestResult.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmTestResult.en.resx
@@ -1378,4 +1378,7 @@
   <data name="keywordText.SubLess" xml:space="preserve">
     <value>Insufficient substrate, this operation failed</value>
   </data>
+  <data name="keywordText.NoAddSample" xml:space="preserve">
+    <value>The experiment has not started to add samples, this operation is invalid!</value>
+  </data>
 </root>
