添加在样本装载界面判断底物剩余量的信息 优化质控有效期信息和质控手动录入的功能 优化实验检验规范过程

--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmReagentLoad.en.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmReagentLoad.en.resx
@@ -1137,7 +1137,7 @@
     <value>The remaining measurements are empty. Please re-enter！</value>
   </data>
   <data name="keywordText.LoadBreak" xml:space="preserve">
-    <value>Load interrupt！\n</value>
+    <value>Load complete！\n</value>
   </data>
   <data name="keywordText.LoadSuccess" xml:space="preserve">
     <value>Successful loading!</value>
