--- a/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.resx
+++ b/BioBaseCLIA(BKI1100)_R30/BioBaseCLIA/Run/frmWorkList.resx
@@ -1384,7 +1384,7 @@
     <value>宋体, 10.5pt, style=Bold</value>
   </data>
   <data name="keywordText.Pos" xml:space="preserve">
-    <value>位置:</value>
+    <value>温育盘位置:</value>
   </data>
   <data name="&gt;&gt;TestStatus.Type" xml:space="preserve">
     <value>System.Windows.Forms.DataGridViewTextBoxColumn, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
@@ -2104,5 +2104,8 @@
   </data>
   <data name="keywordText.Tips" xml:space="preserve">
     <value>notification</value>
+  </data>
+  <data name="keywordText.NocontrolInfo" xml:space="preserve">
+    <value>未找到项目名称是 {0}，质控批号是 {1},质控类别是{2}的质控信息！</value>
   </data>
 </root>
